	PR#1626789 with large PDB files. Fixes regression to 2006-09-25
	changes supporting >2^16 atoms or bonds.
	
	* src/mol.cpp(EndModify): Ensure idx is unsigned (to match atom indexes).

	* include/openbabel/chains.h, src/chains.cpp: Make sure atomids is
	int, not short. Atom IDs can go up to a full unsigned int.

	* src/formats/chemdrawcdx.cpp: Some code cleanups, including use
	of obErrorLog.

2007-03-16  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/groupcontrib.cpp, include/openbabel/groupcontrib.h: General
	class to handle group contribution algorithms (LogP, TPSA, MR, ...).
	Also contins OBLogP, OBPSA and OBMR. Should these simple classes be
	bundled in a OBDescriptors class?

	* src/logp.cpp, src/psa.cpp, include/openbabel/logp.h,
	include/openbabel/psa.h: moved to groupcontrib.cpp/h

	* data/mr.txt: data for molecular refractivity.

	* test/logp_psa.cpp: forgot to commit.

2007-03-14  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/inchiformat.cpp, src/formats/cmlformat.cpp: Fix compile
	problems with GCC and last changes. (Return value from
	OBChiralData should be assigned to a full object.)

	* src/obconversion.cpp, src/obconversion.h: Tackle some gzip
	problems, including PR  #1617838. We need to be sure we don't try
	to gzip twice. Create a zip_istream pointer, then free it as
	needed.

	* scripts/*: Updated for recent library changes.

2007-03-13 Chris Morley
	
	* src/formats/inchiformat.cpp: Add bond stereo handling to
	ReadMolecule(). Correct 0D stereo in reading and writing.
	Remove the waring message about stereochemistry. Apart from
	a few special cases, e.g. allenes, 'either' parity, I think
	the InChI writing and reading is now ok., but still more 
	testing needed...
	TestFormat messages improved.
	
	* src/formats/xml/cmlformat.cpp: Correct handling of 0D
	atomParity on reading and writing.
	
	* src/GUI/optswx.cpp: Added documentation

2007-03-13  Tim Vandermeersch <tim.vandermeersch@gmail.com>
